<resources>
    <!-- App name -->
    <string name="app_name">Music Notification</string>

    <string name="mudarLingua">Altere a lingua padrao do app</string>
    <string name="escolhaLingua">Escolha sua Lingua</string>
    <string name="verCarrossel">Ver Carrossel</string>
    <string name="musica1">Musica 1</string>
    <string name="musica2">Musica 2</string>
    <string name="musica3">Musica 3</string>
    <string name="musica4">Musica 4</string>
    <string name="nomeArtista">Nome do Artista</string>
    <string name="nomeMusica">Nome da Musica</string>
</resources>
